<resources>
    <string name="app_name">finale project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signingup">By signing up, you agree to the Terms of Service and Privacy Policy</string>
    <string name="verification">Verification</string>
    <string name="enter_your_verification_code">Enter your Verification Code</string>
    <string name="verificationsa">We send verification code to your email. You can check your inbox</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="continue_pass">continue</string>
    <string name="email_on_the_way">Check your email  and follow the instructions to reset your password</string>
    <string name="transaction">Transaction</string>
    <string name="prolife">Prolife</string>
    <string name="description">description</string>

    <string name="Shopping">Shopping</string>
    <string name="Rent">Rent</string>
    <string name="Education">Education</string>
    <string name="Gift">Gift</string>
    <string name="Health_Care">Health care</string>
    <string name="Transportation">Transportation</string>
    <string name="Subscription">Subscription</string>
    <string name="Food">Food</string>
    <string name="Salary">Salary</string>
    <string name="Passive_income">Passive income</string>
    <string name="Income">Income</string>
    <string name="Expense">Expense</string>
    <string name="account_balance">Account Balance</string>
    <string name="account">Account</string>
    <string name="setting">Setting</string>
    <string name="don_t_worry_enter_your_email_and_we_ll_send_you_a_link_to_reset_your_password">Don’t worry. Enter your email and we’ll send you a link to reset your password.</string>
    <string name="your_transactions_will_show_up_here">your transactions will show up here</string>
    <string name="exchange">Exchange</string>
    <string name="your_transactions">Your transactions</string>
    <string name="expenses_chart">Expenses chart</string>
    <string name="income_chart">income chart</string>
    <string name="repeat_password">repeat password</string>
    <string name="amountorsecvalueisnull">amount is empty</string>
    <string name="amountbadlyformated">amount is badly formated</string>
    <string name="notenough">not enough money</string>
    <string name="resetProblem">There was a problem sending link to your email</string>
    <string name="reserSucces">reset link is send to your email</string>
    <string name="emailBadlyFormatted">email is either empty or badly formatted</string>
    <string name="resetemail">reset email is sent</string>
    <string name="emailisnotvalid">email is not valid</string>
    <string name="income">Income</string>
    <string name="_0">$0</string>
    <string name="todo">TODO</string>
    <string name="expense">Expense</string>

    <string name="transactions_history">Transactions history</string>
    <string name="see_more">see more</string>
    <string name="sell">sell</string>
    <string name="buy">buy</string>
    <string name="amount">Amount</string>


    <string-array name="currency">
        <item >GEL</item>
        <item >USD</item>
        <item >EUR</item>
        <item >AED</item>
        <item >AMD</item>
        <item >AVD</item>
        <item >AZN</item>
        <item >BGN</item>
        <item >CAD</item>
        <item >CHF</item>
        <item >CNY</item>
        <item >CZK</item>
        <item >DKK</item>
        <item >GBP</item>
        <item >ILS</item>
        <item >JPY</item>
        <item >NOK</item>
        <item >PLN</item>
        <item >QAR</item>
        <item >SAR</item>
        <item >SEK</item>
        <item >TRY</item>
        <item >UKG</item>
    </string-array>

    <string-array name="category">
        <item>Income</item>
        <item>Expense</item>
    </string-array>
    <string-array name="clear">
    </string-array>
    <string-array name="expense">
        <item>Food</item>
        <item>Shopping</item>
        <item>Transportation</item>
        <item>Subscription</item>
        <item>Rent</item>
        <item>Health care</item>
        <item>Other</item>
    </string-array>

    <string-array name="income">
        <item>Salary</item>
        <item>Passive income</item>
        <item>Gift</item>
        <item>Other</item>
    </string-array>

</resources>